<resources>
    <string name="app_name">LYIMLib</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">相册</string>
    <string name="attach_take_photos">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件夹</string>
    <string name="user_card">个人名片</string>
    <string name="attach_voice_call">语音电话</string>

</resources>
