<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F8">

    <LinearLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0"/>

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_mode_voice"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_voice"
                android:onClick="setModeVoice"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btn_set_mode_keyboard"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_keyboard"
                android:onClick="setModeKeyboard"
                android:visibility="gone"/>

             <RelativeLayout
                android:id="@+id/btn_press_to_speak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="gone">

                  <TextView
                    android:id="@+id/tv_chat_vioce"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:text="@string/button_pushtotalk"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:background="@drawable/chat_lyedittext"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/edittext_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:gravity="bottom">

              <com.lykj.emojicon.EmojiconEditText
                  android:id="@+id/et_sendmessage"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/chat_lyedittext"
                  android:hint="请输入内容"
                  android:minHeight="30dp"
                  android:onClick="editClick"
                  android:layout_marginLeft="5dp"
                  android:paddingBottom="2dp"
                  android:paddingLeft="5dp"
                  android:paddingRight="1dp"
                  android:paddingTop="2dp"
                  android:singleLine="false"
                  android:inputType="textMultiLine"
                  android:layout_marginTop="5dp"
                  android:textColor="#666666"
                  android:textColorHint="#666666"
                  android:textSize="16sp" />

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="3dp"
               android:layout_marginRight="3dp" >

                <ImageView
                    android:id="@+id/iv_emoticons_normal"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="1dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_face"
                    android:visibility="visible" />
               <ImageView
                    android:id="@+id/iv_emoticons_checked"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="1dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_face"
                    android:visibility="gone" />
         
            </RelativeLayout>
            <Button
                android:id="@+id/btn_more"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_morefunction"
                android:onClick="more" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/chat_lysend"
                android:onClick="onClick"
                android:text="@string/button_send"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0" />
        <LinearLayout
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:visibility="gone" >

            <!-- 表情图片 -->

            <LinearLayout
                android:id="@+id/ll_face_container"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="vertical"
                android:visibility="visible" >

                <android.support.v4.view.ViewPager
                    android:layout_gravity="center_vertical"
                    android:id="@+id/vPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- 图片，表情，名片等按钮 -->

            <LinearLayout
                android:id="@+id/ll_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="6dp"
                    android:weightSum="5" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_picture"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/ic_morepictures"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_picture"
                            android:textSize="12sp"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_takephoto"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/ic_moretakephoto"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_take_photos"
                            android:textSize="12sp"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_location"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_moreareas" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_location"
                            android:textSize="12sp"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_cars"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_morecards"/>
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/user_card"
                            android:textSize="12sp"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_file"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/ic_morefiles"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_file"
                            android:textSize="12sp"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bar_bottom"
        android:layout_below="@+id/top_view" >
       <ScrollView
           android:id="@+id/scollview"
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:fillViewport="true"
          android:orientation="vertical" 
          android:scrollbars="vertical">
   		<com.dlbase.view.XListView
   		    android:id="@+id/list"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:cacheColorHint="#00000000"
   		    android:divider="@null"
   		    android:listSelector="#00000000"
   		    android:scrollbars="none"
   		    android:transcriptMode="normal"/>
       </ScrollView>

        <RelativeLayout
            android:id="@+id/recording_container"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:background="@drawable/recording_lyhint_bg"
            android:padding="2dp"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/mic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/record_animate_01" />

            <TextView
                android:id="@+id/recording_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mic_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/move_up_to_cancel"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/recording_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="2dp"
                android:text="0&apos;&apos;"
                android:textSize="12sp"/>
        </RelativeLayout>
    </RelativeLayout>
    
   <include 
       android:id="@+id/top_view"
       layout="@layout/top_layout"/>
</RelativeLayout>